--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -79,9 +79,10 @@
 
     <div class="navbar-end">
       <div class="navbar-item">
+
         <div class="buttons">
-          <a class="button is-light">
-            Log in
+          <a class="button is-danger" routerLink="/" (click)="logout()">
+            Log out
           </a>
         </div>
       </div>
