--- a/src/app/preliminary/preliminary.component.html
+++ b/src/app/preliminary/preliminary.component.html
@@ -5,7 +5,7 @@
 
     <main class="main">
 
-      <div class="tile is-ancestor">
+      <div [formGroup]="preliminaryForm" class="tile is-ancestor">
         <div class="tile is-vertical is-6">
           <div class="tile is-parent">
             <article class="tile is-child notification is-while" style="color: rgba(0, 0, 0, 0.7);">
@@ -20,7 +20,7 @@
                   <div class="field-body">
                     <div class="field">
                       <div class="control">
-                        <input class="input" type="text" placeholder="e.g. Partnership opportunity">
+                        <input class="input" type="text" formControlName="preliminaryid" placeholder="PreliminaryID">
                       </div>
                     </div>
                   </div>
@@ -33,13 +33,13 @@
                   <div class="field-body">
                     <div class="field">
                       <div class="control">
-                        <input class="input" type="text" placeholder="e.g. Partnership opportunity">
+                        <input class="input" type="text" formControlName="cardid" placeholder="Card ID">
                       </div>
                     </div>
                   </div>
                 </div>
 
-                <div class="field is-horizontal">
+                <!-- <div class="field is-horizontal">
                   <div class="field-label is-normal">
                     <label class="label">รหัสบัตรประชาชน</label>
                   </div>
@@ -50,7 +50,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="field is-horizontal">
                   <div class="field-label is-normal">
@@ -58,25 +58,16 @@
                   </div>
                   <div class="field-body">
                     <div class="field">
-                      <p class="control is-expanded has-icons-left">
-                        <input class="input" type="text" placeholder="Name">
-                        <span class="icon is-small is-left">
-                          <i class="fas fa-user"></i>
-                        </span>
-                      </p>
+                      <div class="control is-expanded has-icons-right">
+                        <input class="input" type="text" formControlName="firstname" placeholder="Firstname">
+                      </div>
                     </div>
                     <div class="field-label is-normal">
                       <label class="label">นามสกุล</label>
                     </div>
                     <div class="field">
-                      <p class="control is-expanded has-icons-left has-icons-right">
-                        <input class="input is-success" type="text" placeholder="Email" value="alex@smith.com">
-                        <span class="icon is-small is-left">
-                          <i class="fas fa-envelope"></i>
-                        </span>
-                        <span class="icon is-small is-right">
-                          <i class="fas fa-check"></i>
-                        </span>
+                      <p class="control is-expanded has-icons-right">
+                        <input class="input" type="text" formControlName="lastname" placeholder="Lastname">
                       </p>
                     </div>
                   </div>
@@ -89,13 +80,13 @@
                   <div class="field-body">
                     <div class="field">
                       <div class="control">
-                        <input class="input" type="date" placeholder="e.g. Partnership opportunity">
+                        <input class="input" type="date" formControlName="birthday" placeholder="Birthday">
                       </div>
                     </div>
                   </div>
                 </div>
 
-                <div class="field is-horizontal">
+                <!-- <div class="field is-horizontal">
                   <div class="field-label is-normal">
                     <label class="label">เพศ</label>
                   </div>
@@ -125,7 +116,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <div class="field is-horizontal">
                   <div class="field-label is-normal">
@@ -134,7 +125,7 @@
                   <div class="field-body">
                     <div class="field">
                       <div class="control is-expanded has-icons-left">
-                        <textarea class="textarea" placeholder="e.g. Hello world"></textarea>
+                        <textarea class="textarea" formControlName="address" placeholder="Address"></textarea>
                       </div>
                     </div>
                     <div class="field-label is-normal">
@@ -142,7 +133,7 @@
                     </div>
                     <div class="field">
                       <div class="control is-expanded has-icons-left has-icons-right">
-                        <textarea class="textarea" placeholder="e.g. Hello world"></textarea>
+                        <textarea class="textarea" formControlName="allergic" placeholder="Allergic"></textarea>
                       </div>
                     </div>
                   </div>
@@ -175,13 +166,13 @@
                   <div class="field-body">
                     <div class="field">
                       <div class="control">
-                        <input class="input" type="text" placeholder="e.g. Partnership opportunity">
+                        <input class="input" type="text" formControlName="tel" placeholder="Tel">
                       </div>
                     </div>
                   </div>
                 </div>
 
-                <div class="field is-horizontal">
+                <!-- <div class="field is-horizontal">
                   <div class="field-label is-normal">
                     <label class="label">โรคประจำตัว</label>
                   </div>
@@ -192,7 +183,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
               </div>
             </article>
@@ -207,12 +198,12 @@
                 <!-- Content -->
                 <div class="field is-horizontal">
                   <div class="field-label is-normal">
-                    <label class="label">โรคประจำตัว</label>
+                    <label class="label">อาการเบื้องต้น</label>
                   </div>
                   <div class="field-body">
                     <div class="field">
                       <div class="control">
-                        <textarea class="textarea" placeholder="Explain how we can help you"></textarea>
+                        <textarea class="textarea" formControlName="preliminarycondition" placeholder="Preliminary Condition"></textarea>
                       </div>
                     </div>
                   </div>
@@ -224,11 +215,10 @@
                   </div>
                   <div class="field-body">
                     <div class="field">
-                      <div class="control is-expanded has-icons-left has-icons-right">
+                      <div class="control">
                         <div class="select">
-                          <select>
-                            <option>Select dropdown</option>
-                            <option>With options</option>
+                          <select formControlName="preliminarymemo">
+                            <option *ngFor="let item of tableTime" [value]="item.id">{{item.name}}</option>
                           </select>
                         </div>
                       </div>
@@ -243,7 +233,7 @@
                   <div class="field-body">
                     <div class="field">
                       <div class="control">
-                        <input class="input" type="text" placeholder="e.g. Partnership opportunity">
+                        <input class="input" type="text" formControlName="empname" placeholder="EmpName">
                       </div>
                     </div>
                   </div>
@@ -257,7 +247,7 @@
                     <div class="field">
                       <div class="control is-expanded has-icons-left has-icons-right">
                         <div class="buttons">
-                          <button class="button is-primary">บันทึกอาการ</button>
+                          <button class="button is-primary" (click)="insertPreliminary()">บันทึกอาการ</button>
                           <button class="button is-light">ย้อนกลับ</button>
                         </div>
                       </div>
