--- a/src/app/dealer/dealer.component.html
+++ b/src/app/dealer/dealer.component.html
@@ -8,7 +8,8 @@
       <div class="tile is-ancestor">
         <div class="tile is-vertical is-6">
           <div class="tile is-parent">
-            <article class="tile is-child notification is-while" style="color: rgba(0, 0, 0, 0.7);">
+            <article [formGroup]="cardPatientForm" class="tile is-child notification is-while"
+              style="color: rgba(0, 0, 0, 0.7);">
               <p class="title">เพิ่มตัวแทนจำหน่าย</p>
               <p class="subtitle">กรอกข้อมูลตัวแทนจำหน่าย</p>
               <div class="content">
@@ -19,26 +20,71 @@
                   </div>
                   <div class="field-body">
                     <div class="field">
-                      <p class="control is-expanded has-icons-left">
-                        <input class="input" type="text" placeholder="Name">
+                      <p class="control is-expanded has-icons-right">
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['firstname'].valid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['lastname'].dirty),
+                          'is-danger': cardPatientForm.controls['firstname'].invalid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)}"
+                          type="text" placeholder="Firstname" formControlName="firstname">
+                        <span
+                          *ngIf="cardPatientForm.controls['firstname'].valid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['firstname'].invalid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['firstname'].invalid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกชื่อ
+                        </span>
+                      </p>
+                      <!-- <p class="control is-expanded has-icons-left">
+                        <input class="input" type="text" placeholder="Name" formControlName="firstname">
                         <span class="icon is-small is-left">
                           <i class="fas fa-user"></i>
                         </span>
-                      </p>
+                      </p> -->
                     </div>
                     <div class="field-label is-normal">
                       <label class="label">นามสกุล</label>
                     </div>
                     <div class="field">
-                      <p class="control is-expanded has-icons-left has-icons-right">
-                        <input class="input is-success" type="text" placeholder="Email" value="alex@smith.com">
+                      <p class="control is-expanded has-icons-right">
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['lastname'].valid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty),
+                          'is-danger': cardPatientForm.controls['lastname'].invalid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty)}"
+                          type="text" placeholder="Lastname" formControlName="lastname">
+                        <!-- <span class="icon is-small is-left">
+                          <i class="fas fa-envelope"></i>
+                        </span> -->
+                        <span
+                          *ngIf="cardPatientForm.controls['lastname'].valid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['lastname'].invalid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['lastname'].invalid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกนามสกุล
+                        </span>
+                      </p>
+                      <!-- <p class="control is-expanded has-icons-left has-icons-right">
+                        <input class="input is-success" type="text" placeholder="Lastname" formControlName="lastname">
                         <span class="icon is-small is-left">
                           <i class="fas fa-envelope"></i>
                         </span>
                         <span class="icon is-small is-right">
                           <i class="fas fa-check"></i>
                         </span>
-                      </p>
+                      </p> -->
                     </div>
                   </div>
                 </div>
@@ -49,10 +95,29 @@
                   </div>
                   <div class="field-body">
                     <div class="field">
-                      <p class="control is-expanded has-icons-left">
-                        <input class="input" type="text" placeholder="Name">
-                        <span class="icon is-small is-left">
-                          <i class="fas fa-user"></i>
+                      <p class="control is-expanded has-icons-right">
+                        <!-- <input class="input" type="text" placeholder="Tel" formControlName="tel"> -->
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['tel'].valid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty),
+                          'is-danger': cardPatientForm.controls['tel'].invalid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty)}"
+                          type="text" placeholder="Tel" formControlName="tel">
+                        <!-- <span class="icon is-small is-left">
+                          <i class="fas fa-envelope"></i>
+                        </span> -->
+                        <span
+                          *ngIf="cardPatientForm.controls['tel'].valid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['tel'].invalid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['tel'].invalid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกเบอร์โทรศัพท์
                         </span>
                       </p>
                     </div>
@@ -60,9 +125,44 @@
                       <label class="label">อีเมล</label>
                     </div>
                     <div class="field">
-                      <div class="control">
-                        <input class="input" type="text" placeholder="e.g. Partnership opportunity">
-                      </div>
+                      <p class="control is-expanded has-icons-right">
+                        <!-- <input class="input" type="email" placeholder="Email" formControlName="email"> -->
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['email'].valid && (cardPatientForm.controls['email'].touched || cardPatientForm.controls['email'].dirty),
+                            'is-danger': cardPatientForm.controls['email'].invalid && (cardPatientForm.controls['email'].touched || cardPatientForm.controls['email'].dirty)}"
+                          type="email" placeholder="Email" formControlName="email">
+                        <!-- <span class="icon is-small is-left">
+                          <i class="fas fa-envelope"></i>
+                        </span> -->
+                        <span
+                          *ngIf="cardPatientForm.controls['email'].valid && (cardPatientForm.controls['email'].touched || cardPatientForm.controls['email'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['email'].invalid && (cardPatientForm.controls['email'].touched || cardPatientForm.controls['email'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['email'].invalid && (cardPatientForm.controls['email'].touched || cardPatientForm.controls['email'].dirty && cardPatientForm.controls['email'].errors?.['required'])"
+                          class="help is-danger">
+                          กรุณากรอก email
+                        </span>
+                        <span *ngIf="cardPatientForm.controls['email'].errors?.['pattern']" class="help is-danger">
+                          รูปแบบ email ไม่ถูกต้อง
+                        </span>
+
+                        <!-- <p class="control is-expanded has-icons-left has-icons-right">
+                          <input class="input is-success" type="text" placeholder="Lastname" formControlName="lastname">
+                          <span class="icon is-small is-left">
+                            <i class="fas fa-envelope"></i>
+                          </span>
+                          <span class="icon is-small is-right">
+                            <i class="fas fa-check"></i>
+                          </span>
+                        </p> -->
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -74,7 +174,16 @@
                   <div class="field-body">
                     <div class="field">
                       <div class="control is-expanded has-icons-left">
-                        <textarea class="textarea" placeholder="e.g. Hello world"></textarea>
+                        <!-- <textarea class="textarea" placeholder="Address" formControlName="address"></textarea> -->
+                        <textarea class="textarea"
+                          [ngClass]="{'is-success': cardPatientForm.controls['address'].valid && (cardPatientForm.controls['address'].touched || cardPatientForm.controls['address'].dirty),
+                        'is-danger': cardPatientForm.controls['address'].invalid && (cardPatientForm.controls['address'].touched || cardPatientForm.controls['address'].dirty)}"
+                          placeholder="Address" formControlName="address"></textarea>
+                        <span
+                          *ngIf="cardPatientForm.controls['address'].invalid && (cardPatientForm.controls['address'].touched || cardPatientForm.controls['address'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกที่อยู่
+                        </span>
                       </div>
                     </div>
                   </div>
@@ -100,19 +209,16 @@
                   </div>
                 </div> -->
 
-                <div class="field is-horizontal">
-                  <div class="field-label">
-                    <!-- Left empty for spacing -->
+                <div class="field is-grouped is-grouped-centered">
+                  <div class="control">
+                    <button class="button is-primary" type="submit" [disabled]="cardPatientForm.invalid"
+                      (click)="clickSubmit()">
+                      บันทึก
+                    </button>
                   </div>
-                  <div class="field-body">
-                    <div class="field">
-                      <div class="control is-expanded has-icons-left has-icons-right">
-                        <div class="buttons">
-                          <button class="button is-primary">บันทึกการสั่งซื้อ</button>
-                          <button class="button is-light">ย้อนกลับ</button>
-                        </div>
-                      </div>
-                    </div>
+                  <div class="control">
+                    <button class="button is-link is-light" [disabled]="cardPatientForm.invalid"
+                      (click)="clickClear()">ยกเลิก</button>
                   </div>
                 </div>
               </div>
@@ -126,23 +232,7 @@
               <!-- <p class="subtitle">With even more content</p> -->
               <div class="content">
                 <!-- Content -->
-                <div class="field is-horizontal">
-                  <!-- <div class="field-label is-normal">
-                    <label class="label">ค้นหา</label>
-                  </div> -->
-                  <div class="field-body">
-                    <div class="field has-addons">
-                      <p class="control is-expanded">
-                        <input class="input" type="text" placeholder="Your email">
-                      </p>
-                      <p class="control">
-                        <button class="button is-primary">
-                          ค้นหา
-                        </button>
-                      </p>
-                    </div>
-                  </div>
-                </div>
+                <app-search></app-search>
                 <table class="table table is-striped table is-hoverable">
                   <thead>
                     <tr>
@@ -161,31 +251,19 @@
                     </tr>
                   </tfoot>
                   <tbody>
-                    <tr>
-                      <th>1</th>
-                      <td>
-                        <a href="https://en.wikipedia.org/wiki/Leicester_City_F.C." title="Leicester City F.C.">Leicester City</a> <strong>(C)</strong>
-                      </td>
-                      <td>38</td>
+                    <tr *ngFor="let item of apiService.tableList; let i = index;">
+                      <th>{{item.Dealer_ID}}</th>
+                      <td>{{item.Dealer_Name}}</td>
+                      <td>{{item.Tel}}</td>
                       <td>
                         <div class="buttons">
-                          <a class="button is-warning"><i class="fas fa-edit"></i> แก้ไข</a>
-                          <a class="button is-danger"><i class="fas fa-trash-alt"></i> ลบ</a>
+                          <a class="button is-warning" (click)="clickUpdate(item)"><i class="fas fa-edit"></i> แก้ไข</a>
+                          <a class="button is-danger" (click)="clickDelete(item)"><i class="fas fa-trash-alt"></i> ลบ</a>
                         </div>
                       </td>
                     </tr>
-                    <tr>
-                      <th>1</th>
-                      <td>
-                        <a href="https://en.wikipedia.org/wiki/Leicester_City_F.C." title="Leicester City F.C.">Leicester City</a> <strong>(C)</strong>
-                      </td>
-                      <td>38</td>
-                      <td>
-                        <div class="buttons">
-                          <a class="button is-warning"><i class="fas fa-edit"></i> แก้ไข</a>
-                          <a class="button is-danger"><i class="fas fa-trash-alt"></i> ลบ</a>
-                        </div>
-                      </td>
+                    <tr *ngIf="!apiService.tableList.length">
+                      <td colspan="4">No data to display.</td>
                     </tr>
                   </tbody>
                 </table>
