--- a/src/app/disease/disease.component.html
+++ b/src/app/disease/disease.component.html
@@ -8,7 +8,8 @@
       <div class="tile is-ancestor">
         <div class="tile is-vertical is-6">
           <div class="tile is-parent">
-            <article class="tile is-child notification is-while" style="color: rgba(0, 0, 0, 0.7);">
+            <article [formGroup]="cardPatientForm" class="tile is-child notification is-while"
+              style="color: rgba(0, 0, 0, 0.7);">
               <p class="title">อาการรักษาพยาบาล</p>
               <!-- <p class="subtitle">กรอกข้อมูลอาการรักษาพยาบาล</p> -->
               <div class="content">
@@ -19,9 +20,33 @@
                   </div>
                   <div class="field-body">
                     <div class="field">
-                      <div class="control">
-                        <input class="input" type="text" placeholder="e.g. Partnership opportunity">
-                      </div>
+                      <p class="control is-expanded has-icons-right">
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['diseaseid'].valid && (cardPatientForm.controls['diseaseid'].touched || cardPatientForm.controls['diseaseid'].dirty),
+                          'is-danger': cardPatientForm.controls['diseaseid'].invalid && (cardPatientForm.controls['diseaseid'].touched || cardPatientForm.controls['diseaseid'].dirty)}"
+                          type="text" placeholder="DiseaseID" formControlName="diseaseid">
+                        <span
+                          *ngIf="cardPatientForm.controls['diseaseid'].valid && (cardPatientForm.controls['diseaseid'].touched || cardPatientForm.controls['diseaseid'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['diseaseid'].invalid && (cardPatientForm.controls['diseaseid'].touched || cardPatientForm.controls['diseaseid'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['diseaseid'].invalid && (cardPatientForm.controls['diseaseid'].touched || cardPatientForm.controls['diseaseid'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกรหัสโรค
+                        </span>
+                      </p>
+                      <!-- <p class="control is-expanded has-icons-left">
+                        <input class="input" type="text" placeholder="Name" formControlName="diseaseid">
+                        <span class="icon is-small is-left">
+                          <i class="fas fa-user"></i>
+                        </span>
+                      </p> -->
                     </div>
                   </div>
                 </div>
@@ -32,9 +57,33 @@
                   </div>
                   <div class="field-body">
                     <div class="field">
-                      <div class="control">
-                        <input class="input" type="text" placeholder="e.g. Partnership opportunity">
-                      </div>
+                      <p class="control is-expanded has-icons-right">
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['diseasename'].valid && (cardPatientForm.controls['diseasename'].touched || cardPatientForm.controls['diseasename'].dirty),
+                          'is-danger': cardPatientForm.controls['diseasename'].invalid && (cardPatientForm.controls['diseasename'].touched || cardPatientForm.controls['diseasename'].dirty)}"
+                          type="text" placeholder="DiseaseName" formControlName="diseasename">
+                        <span
+                          *ngIf="cardPatientForm.controls['diseasename'].valid && (cardPatientForm.controls['diseasename'].touched || cardPatientForm.controls['diseasename'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['diseasename'].invalid && (cardPatientForm.controls['diseasename'].touched || cardPatientForm.controls['diseasename'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['diseasename'].invalid && (cardPatientForm.controls['diseasename'].touched || cardPatientForm.controls['diseasename'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกชื่อโรค
+                        </span>
+                      </p>
+                      <!-- <p class="control is-expanded has-icons-left">
+                        <input class="input" type="text" placeholder="Name" formControlName="diseasename">
+                        <span class="icon is-small is-left">
+                          <i class="fas fa-user"></i>
+                        </span>
+                      </p> -->
                     </div>
                   </div>
                 </div>
@@ -46,25 +95,57 @@
                   <div class="field-body">
                     <div class="field">
                       <div class="control is-expanded has-icons-left">
-                        <textarea class="textarea" placeholder="e.g. Hello world"></textarea>
+                        <!-- <textarea class="textarea" placeholder="DiseaseDetail" formControlName="diseasedetail"></textarea> -->
+                        <textarea class="textarea"
+                          [ngClass]="{'is-success': cardPatientForm.controls['diseasedetail'].valid && (cardPatientForm.controls['diseasedetail'].touched || cardPatientForm.controls['diseasedetail'].dirty),
+                        'is-danger': cardPatientForm.controls['diseasedetail'].invalid && (cardPatientForm.controls['diseasedetail'].touched || cardPatientForm.controls['diseasedetail'].dirty)}"
+                          placeholder="DiseaseDetail" formControlName="diseasedetail"></textarea>
+                        <span
+                          *ngIf="cardPatientForm.controls['diseasedetail'].invalid && (cardPatientForm.controls['diseasedetail'].touched || cardPatientForm.controls['diseasedetail'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกลักษณะโรค
+                        </span>
                       </div>
-                    </div>
-                    <div class="field-label is-normal">
-                      <label class="label">ค่ารักษาพยบาล</label>
-                    </div>
-                    <div class="field">
-                      <p class="control is-expanded has-icons-left has-icons-right">
-                        <input class="input is-success" type="text" placeholder="Email" value="alex@smith.com">
-                        <span class="icon is-small is-left">
-                          <i class="fas fa-envelope"></i>
-                        </span>
-                        <span class="icon is-small is-right">
-                          <i class="fas fa-check"></i>
-                        </span>
-                      </p>
                     </div>
                   </div>
                 </div>
+
+                <!-- <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">ค่ารักษาพยบาล</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <p class="control">
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['firstname'].valid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['lastname'].dirty),
+                          'is-danger': cardPatientForm.controls['firstname'].invalid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)}"
+                          type="text" placeholder="Firstname" formControlName="firstname">
+                        <span
+                          *ngIf="cardPatientForm.controls['firstname'].valid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['firstname'].invalid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['firstname'].invalid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกค่ารักษาพยบาล
+                        </span>
+                      </p> -->
+                      <!-- <p class="control is-expanded has-icons-left">
+                        <input class="input" type="text" placeholder="Name" formControlName="firstname">
+                        <span class="icon is-small is-left">
+                          <i class="fas fa-user"></i>
+                        </span>
+                      </p> -->
+                    <!-- </div>
+                  </div>
+                </div> -->
 
                 <!-- <div class="field is-horizontal">
                   <div class="field-label"></div>
@@ -85,19 +166,16 @@
                   </div>
                 </div> -->
 
-                <div class="field is-horizontal">
-                  <div class="field-label">
-                    <!-- Left empty for spacing -->
+                <div class="field is-grouped is-grouped-centered">
+                  <div class="control">
+                    <button class="button is-primary" type="submit" [disabled]="cardPatientForm.invalid"
+                      (click)="clickSubmit()">
+                      บันทึก
+                    </button>
                   </div>
-                  <div class="field-body">
-                    <div class="field">
-                      <div class="control is-expanded has-icons-left has-icons-right">
-                        <div class="buttons">
-                          <button class="button is-primary">บันทึกการสั่งซื้อ</button>
-                          <button class="button is-light">ย้อนกลับ</button>
-                        </div>
-                      </div>
-                    </div>
+                  <div class="control">
+                    <button class="button is-link is-light" [disabled]="cardPatientForm.invalid"
+                      (click)="clickClear()">ยกเลิก</button>
                   </div>
                 </div>
               </div>
@@ -111,30 +189,14 @@
               <!-- <p class="subtitle">With even more content</p> -->
               <div class="content">
                 <!-- Content -->
-                <div class="field is-horizontal">
-                  <!-- <div class="field-label is-normal">
-                    <label class="label">ค้นหา</label>
-                  </div> -->
-                  <div class="field-body">
-                    <div class="field has-addons">
-                      <p class="control is-expanded">
-                        <input class="input" type="text" placeholder="Your email">
-                      </p>
-                      <p class="control">
-                        <button class="button is-primary">
-                          ค้นหา
-                        </button>
-                      </p>
-                    </div>
-                  </div>
-                </div>
+                <app-search></app-search>
                 <table class="table table is-striped table is-hoverable">
                   <thead>
                     <tr>
                       <th><abbr title="Position">รหัสโรค</abbr></th>
                       <th>ชื่อโรค</th>
                       <th><abbr title="Played">ลักษณะโรค</abbr></th>
-                      <th>ค่ารักษาพยบาล</th>
+                      <!-- <th>ค่ารักษาพยบาล</th> -->
                       <th>จัดการ</th>
                     </tr>
                   </thead>
@@ -143,38 +205,24 @@
                       <th><abbr title="Position">รหัสโรค</abbr></th>
                       <th>ชื่อโรค</th>
                       <th><abbr title="Played">ลักษณะโรค</abbr></th>
-                      <th>ค่ารักษาพยบาล</th>
+                      <!-- <th>ค่ารักษาพยบาล</th> -->
                       <th>จัดการ</th>
                     </tr>
                   </tfoot>
                   <tbody>
-                    <tr>
-                      <th>1</th>
-                      <td>
-                        <a href="https://en.wikipedia.org/wiki/Leicester_City_F.C." title="Leicester City F.C.">Leicester City</a> <strong>(C)</strong>
-                      </td>
-                      <td>38</td>
-                      <td>38</td>
+                    <tr *ngFor="let item of apiService.tableList; let i = index;">
+                      <th>{{item.Disease_ID}}</th>
+                      <td>{{item.Disease_Name}}</td>
+                      <td>{{item.Disease_Detail}}</td>
                       <td>
                         <div class="buttons">
-                          <a class="button is-warning"><i class="fas fa-edit"></i> แก้ไข</a>
-                          <a class="button is-danger"><i class="fas fa-trash-alt"></i> ลบ</a>
+                          <a class="button is-warning" (click)="clickUpdate(item)"><i class="fas fa-edit"></i> แก้ไข</a>
+                          <a class="button is-danger" (click)="clickDelete(item)"><i class="fas fa-trash-alt"></i> ลบ</a>
                         </div>
                       </td>
                     </tr>
-                    <tr>
-                      <th>1</th>
-                      <td>
-                        <a href="https://en.wikipedia.org/wiki/Leicester_City_F.C." title="Leicester City F.C.">Leicester City</a> <strong>(C)</strong>
-                      </td>
-                      <td>38</td>
-                      <td>38</td>
-                      <td>
-                        <div class="buttons">
-                          <a class="button is-warning"><i class="fas fa-edit"></i> แก้ไข</a>
-                          <a class="button is-danger"><i class="fas fa-trash-alt"></i> ลบ</a>
-                        </div>
-                      </td>
+                    <tr *ngIf="!apiService.tableList.length">
+                      <td colspan="5">No data to display.</td>
                     </tr>
                   </tbody>
                 </table>
