--- a/src/app/symptoms/symptoms.component.html
+++ b/src/app/symptoms/symptoms.component.html
@@ -1,1 +1,362 @@
-<p>symptoms works!</p>
+<app-header></app-header>
+<div class="wrapper">
+  <div class="">
+    <app-sidebar></app-sidebar>
+
+    <main class="main">
+
+      <div class="tile is-ancestor">
+        <div class="tile is-vertical is-6">
+          <div class="tile is-parent">
+            <article [formGroup]="cardPatientForm" class="tile is-child notification is-while"
+              style="color: rgba(0, 0, 0, 0.7);">
+              <p class="title">ข้อมูลการรักษา</p>
+              <p class="subtitle">ข้อมูลผู้ป่วย</p>
+              <div class="content">
+                <!-- Content -->
+                <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">รหัสบัตรผู้ป่วย</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control">
+                        <input class="input" type="text" placeholder="CardID" formControlName="cardid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">ชื่อ</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control is-expanded has-icons-right">
+                        <!-- <input class="input" type="text" placeholder="Firstname" formControlName="firstname"> -->
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['firstname'].valid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['lastname'].dirty),
+                          'is-danger': cardPatientForm.controls['firstname'].invalid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)}"
+                          type="text" placeholder="Firstname" formControlName="firstname">
+                        <span
+                          *ngIf="cardPatientForm.controls['firstname'].valid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['firstname'].invalid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['firstname'].invalid && (cardPatientForm.controls['firstname'].touched || cardPatientForm.controls['firstname'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกชื่อ
+                        </span>
+                      </div>
+                      <!-- <p class="control is-expanded has-icons-left">
+                        <input class="input" type="text" placeholder="Name" formControlName="firstname">
+                        <span class="icon is-small is-left">
+                          <i class="fas fa-user"></i>
+                        </span>
+                      </p> -->
+                    </div>
+                    <div class="field-label is-normal">
+                      <label class="label">นามสกุล</label>
+                    </div>
+                    <div class="field">
+                      <p class="control is-expanded has-icons-right">
+                        <!-- {{ cardPatientForm.value | json }} -->
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['lastname'].valid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty),
+                          'is-danger': cardPatientForm.controls['lastname'].invalid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty)}"
+                          type="text" placeholder="Lastname" formControlName="lastname">
+                        <!-- <span class="icon is-small is-left">
+                          <i class="fas fa-envelope"></i>
+                        </span> -->
+                        <span
+                          *ngIf="cardPatientForm.controls['lastname'].valid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['lastname'].invalid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['lastname'].invalid && (cardPatientForm.controls['lastname'].touched || cardPatientForm.controls['lastname'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกนามสกุล
+                        </span>
+                      </p>
+                      <!-- <p class="control is-expanded has-icons-left has-icons-right">
+                        <input class="input is-success" type="text" placeholder="Lastname" formControlName="lastname">
+                        <span class="icon is-small is-left">
+                          <i class="fas fa-envelope"></i>
+                        </span>
+                        <span class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                      </p> -->
+                    </div>
+                  </div>
+                </div>
+
+                <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">วันเดือนปีเกิด</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control is-expanded has-icons-right">
+                        <!-- <input class="input" type="date" placeholder="Birthday" formControlName="birthday"> -->
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['birthday'].valid && (cardPatientForm.controls['birthday'].touched || cardPatientForm.controls['birthday'].dirty),
+                          'is-danger': cardPatientForm.controls['birthday'].invalid && (cardPatientForm.controls['birthday'].touched || cardPatientForm.controls['birthday'].dirty)}"
+                          type="date" placeholder="Birthday" formControlName="birthday">
+                        <!-- <span class="icon is-small is-left">
+                          <i class="fas fa-envelope"></i>
+                        </span> -->
+                        <span
+                          *ngIf="cardPatientForm.controls['birthday'].valid && (cardPatientForm.controls['birthday'].touched || cardPatientForm.controls['birthday'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['birthday'].invalid && (cardPatientForm.controls['birthday'].touched || cardPatientForm.controls['birthday'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['birthday'].invalid && (cardPatientForm.controls['birthday'].touched || cardPatientForm.controls['birthday'].dirty)"
+                          class="help is-danger">
+                          กรุณาเลือกวันเดือนปีเกิด
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">เพศ</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control">
+                        <label class="radio">
+                          <input type="radio" name="member">
+                          Yes
+                        </label>
+                        <label class="radio">
+                          <input type="radio" name="member">
+                          No
+                        </label>
+                      </div>
+                    </div>
+                    <div class="field-label is-normal">
+                      <label class="label">กรุ๊ป</label>
+                    </div>
+                    <div class="field"> -->
+                      <!-- <div class="control is-expanded has-icons-left has-icons-right"> -->
+                      <!-- <div class="control">
+                        <div class="select">
+                          <select>
+                            <option value="">กรุณาเลือกกรุ๊ป</option>
+                            <option value="A">A</option>
+                            <option value="B">B</option>
+                            <option value="O">O</option>
+                            <option value="AB">AB</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
+
+                <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">รหัสอาการเบื้องต้นของผู้ป่วย</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control">
+                        <input class="input" type="text" placeholder="CardID" formControlName="cardid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">รหัสบัตรผู้ป่วย</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control">
+                        <input class="input" type="text" placeholder="CardID" formControlName="cardid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+                <!-- <div class="field is-horizontal">
+                  <div class="field-label"></div>
+                  <div class="field-body">
+                    <div class="field is-expanded">
+                      <div class="field has-addons">
+                        <p class="control">
+                          <a class="button is-static">
+                            +44
+                          </a>
+                        </p>
+                        <p class="control is-expanded">
+                          <input class="input" type="tel" placeholder="Your phone number">
+                        </p>
+                      </div>
+                      <p class="help">Do not enter the first zero</p>
+                    </div>
+                  </div>
+                </div> -->
+
+                <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">รหัสการรักษา</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control is-expanded has-icons-right">
+                        <!-- <input class="input" type="text" placeholder="Tel" formControlName="tel"> -->
+                        <input class="input"
+                          [ngClass]="{'is-success': cardPatientForm.controls['tel'].valid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty),
+                          'is-danger': cardPatientForm.controls['tel'].invalid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty)}"
+                          type="text" placeholder="Tel" formControlName="tel">
+                        <!-- <span class="icon is-small is-left">
+                          <i class="fas fa-envelope"></i>
+                        </span> -->
+                        <span
+                          *ngIf="cardPatientForm.controls['tel'].valid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-check"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['tel'].invalid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty)"
+                          class="icon is-small is-right">
+                          <i class="fas fa-exclamation-triangle"></i>
+                        </span>
+                        <span
+                          *ngIf="cardPatientForm.controls['tel'].invalid && (cardPatientForm.controls['tel'].touched || cardPatientForm.controls['tel'].dirty)"
+                          class="help is-danger">
+                          กรุณากรอกเบอร์โทรศัพท์
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">รหัสโรค</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control">
+                        <input class="input" type="text" placeholder="CardID" formControlName="cardid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">ค่ารักษา</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control">
+                        <input class="input" type="text" placeholder="CardID" formControlName="cardid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="field is-horizontal">
+                  <div class="field-label is-normal">
+                    <label class="label">อาการ</label>
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control">
+                        <textarea class="textarea" placeholder="Explain how we can help you"></textarea>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="field is-horizontal">
+                  <div class="field-label">
+                    <!-- Left empty for spacing -->
+                  </div>
+                  <div class="field-body">
+                    <div class="field">
+                      <div class="control">
+                        <button class="button is-primary" type="submit" (click)="onSubmit()">
+                          บันทึก
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+        <div class="tile is-parent">
+          <article class="tile is-child notification is-while" style="color: rgba(0, 0, 0, 0.7);">
+            <div class="content">
+              <p class="title">รายชื่อผู้ป่วย</p>
+              <!-- <p class="subtitle">With even more content</p> -->
+              <div class="content">
+                <!-- Content -->
+                <app-search></app-search>
+                <table class="table table is-striped table is-hoverable">
+                  <thead>
+                    <tr>
+                      <th><abbr title="Position">รหัสบัตร</abbr></th>
+                      <th>ชื่อผู้ป่วย</th>
+                      <th><abbr title="Played">ใช้บริการล่าสุด</abbr></th>
+                      <th></th>
+                    </tr>
+                  </thead>
+                  <tfoot>
+                    <tr>
+                      <th><abbr title="Position">รหัสบัตร</abbr></th>
+                      <th>ชื่อผู้ป่วย</th>
+                      <th><abbr title="Played">ใช้บริการล่าสุด</abbr></th>
+                      <th></th>
+                    </tr>
+                  </tfoot>
+                  <tbody>
+                    <tr *ngFor="let item of tableList; let i = index;">
+                      <th>{{item.Card_ID}}</th>
+                      <td>{{item.Patient_Name}}</td>
+                      <td>{{item.Patient_Name}}</td>
+                      <td></td>
+                    </tr>
+                    <tr *ngIf="!tableList.length">
+                      <td colspan="4">No data to display.</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+
+    </main>
+  </div>
+</div>
